--- a/One Pager/index.html
+++ b/One Pager/index.html
@@ -17,10 +17,10 @@
    </div>
    <nav id="main-nav">
       <ul>
-      <li><a href="#home"></a>Home</li>
-      <li><a href="#about"></a>About</li>
-      <li><a href="#work"></a>Work</li>
-      <li><a href="#contact"></a>Contact</li>
+         <li class="navbar-list"><a href="#home"></a>Home</li>
+         <li class="navbar-list"><a href="#about"></a>About</li>
+         <li class="navbar-list"><a href="#work"></a>Work</li>
+         <li class="navbar-list"><a href="#contact"></a>Contact</li>
       </ul>
    </nav>
 </header>
@@ -40,6 +40,64 @@
    <img src="img/avatar.png" alt="Avatar">
    <h4>Justin / Mediengestalter</h4>
    <p>Text</p>
+   <h4>Von lasse</h4>
+   <h4>Zubereitung</h4>
+   <ol>
+      <li>Mit Punkten</li>
+      <li>Mit Punkten</li>
+      <ol type="a">
+         <li>Unterpunkt</li>
+      </ol>
+      <li>Mit Punkten</li>
+      <li>Mit Punkten</li>
+      <li>Mit Punkten</li>
+      <li>Mit Punkten</li>
+      <li>Mit Punkten</li>
+   </ol>
+   <h4>Zutatenliste</h4>
+   <ul>
+      <li>Ohne Punkte</li>
+      <li>Ohne Punkte</li>
+      <ul style="list-style-type:circle;">
+         <li>Unterpunkt</li>
+      </ul>
+      <li>Ohne Punkte</li>
+      <li>Ohne Punkte</li>
+      <li>Ohne Punkte</li>
+      <li>Ohne Punkte</li>
+      <li>Ohne Punkte</li>
+      <li>Ohne Punkte</li>
+      <li>Ohne Punkte</li>
+   </ul>
+
+   <table style="width:60vw; margin-left: 20vw;" class="color-table">
+      <tr class="table-row-height">
+         <th style="background-color: yellow; width: 6em;">Yellow</th>
+         <th style="background-color: purple;">purple</th>
+         <th style="background-color: turquoise;">turkis</th>
+         <th style="background-color: grey;">grey</th>
+      </tr>
+      <tr class="table-row-height">
+         <td colspan="2">Bill Gates</td>
+         <td>55577854</td>
+         <td>55577855</td>
+      </tr>
+      <tr class="table-row-height">
+         <td>Bill Gates</td>
+         <td rowspan="2">55577854</td>
+         <td>55577855</td>
+         <td rowspan="3">55577855</td>
+      </tr>
+      <tr class="table-row-height">
+         <td>Bill Gates</td>
+         <td>55577854</td>
+      </tr>
+      <tr class="table-row-height">
+         <td colspan="3">Bill Gates</td>
+      </tr>
+   </table>
+
+
 </section>
  <!--WORK-------------------------------------------------------------->
 <section id="work">
