--- a/One Pager/index.html
+++ b/One Pager/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-   <title>Berufschule Homepage | One Pager Projekt</title>
+   <title>Berufsschule Homepage | One Pager Projekt</title>
     <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap" rel="stylesheet">
@@ -17,17 +17,17 @@
    </div>
    <nav id="main-nav">
       <ul>
-         <li class="navbar-list"><a href="#home"></a>Home</li>
-         <li class="navbar-list"><a href="#about"></a>About</li>
-         <li class="navbar-list"><a href="#work"></a>Work</li>
-         <li class="navbar-list"><a href="#contact"></a>Contact</li>
+         <li class="navbar-list"><a href="index.html">Home</a></li>
+         <li class="navbar-list"><a href="#about">About</a></li>
+         <li class="navbar-list"><a href="#work">Aufgaben</a></li>
+         <li class="navbar-list"><a href="#contact">Contact</a></li>
       </ul>
    </nav>
 </header>
 <!--HOME-------------------------------------------------------------->
 <section id="home">
    <hr>
-   <h1>Berufschule</h1>
+   <h1>Berufsschule</h1>
    <h2>HTML &amp; CSS</h2>
    <a href="#about">
       <img src="img/pfeil.png" alt="Pfeil">
@@ -101,16 +101,16 @@
 </section>
  <!--WORK-------------------------------------------------------------->
 <section id="work">
-    <h3>Work</h3>
+    <h3>Aufgaben</h3>
     <hr>
     <div id="projects">
        <ul>
-          <li><a href="#"><img src="http://placehold.it/280x170" alt="Projekt_01"></a></li>
-          <li><a href="#"><img src="http://placehold.it/280x170" alt="Projekt_02"></a></li>
-          <li><a href="#"><img src="http://placehold.it/280x170" alt="Projekt_03"></a></li>
-          <li><a href="#"><img src="http://placehold.it/280x170" alt="Projekt_04"></a></li>
-          <li><a href="#"><img src="http://placehold.it/280x170" alt="Projekt_05"></a></li>
-          <li><a href="#"><img src="http://placehold.it/280x170" alt="Projekt_06"></a></li>
+          <li><a href="unterseite.html"><img src="img/zutatenliste.jpg" alt="Projekt_01"></a></li>
+          <li><a href="#"><img src="img/tabelle.jpg" alt="Projekt_02"></a></li>
+          <li><a href="#"><img src="img/video.jpg" alt="Projekt_03"></a></li>
+          <li><a href="#"><img src="img/weitereaufgaben.jpg" alt="Projekt_04"></a></li>
+          <li><a href="#"><img src="img/weitereaufgaben.jpg" alt="Projekt_05"></a></li>
+          <li><a href="#"><img src="img/weitereaufgaben.jpg" alt="Projekt_06"></a></li>
        </ul>
    </div>
 </section>
